Finished up on our end Checkout and Order Placement, including stock adjustments and ledger entries.

--- a/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Create.cshtml
@@ -23,6 +23,11 @@
             <input class="form-check-input" asp-for="Active" checked /> <span class="font-weight-bolder">Product Is Active</span>
           </label>
         </div>
+        <div class="form-group form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" asp-for="Sample" /> <span class="font-weight-bolder">Product Is a Sample</span>
+          </label>
+        </div>
         <div class="form-group">
           <label asp-for="Sku" class="control-label font-weight-bolder">SKU</label>
           <input asp-for="Sku" class="form-control font-weight-bolder" />
