--- a/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
+++ b/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
@@ -80,7 +80,7 @@
       <h4>Billing and Shipping</h4><br />
       <div class="form-group">
         <div style="display: inline; float: left; vertical-align: middle">
-          <label class="control-label">Order Confirmation Number:</label>
+          <label class="control-label font-weight-bolder">Order Confirmation Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -134,7 +134,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label">(=) Total:</label>
+          <label class="control-label font-weight-bolder">(=) Total:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -161,7 +161,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label">Tracking Number:</label>
+          <label class="control-label font-weight-bolder">Tracking Number:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
@@ -179,7 +179,7 @@
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label">Arrival:</label>
+          <label class="control-label font-weight-bolder">Arrival:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
