--- a/XOSkinWebApp/Areas/Administration/Views/Product/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Product/Edit.cshtml
@@ -49,6 +49,11 @@
               <input class="form-check-input" asp-for="Active" checked /> <span class="font-weight-bolder">Product Is Active</span>
             </label>
           </div>
+          <div class="form-group form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" asp-for="Sample" /> <span class="font-weight-bolder">Product Is a Sample</span>
+            </label>
+          </div>
           <div class="form-group">
             <label asp-for="Sku" class="control-label font-weight-bolder">SKU</label>
             <input asp-for="Sku" class="form-control font-weight-bolder" />
@@ -107,7 +112,7 @@
             <span asp-validation-for="ShippingWeightLb" class="text-danger"></span>
           </div>
           <div class="form-group">
-            <label asp-for="Stock" class="control-label">Original Stock</label>
+            <label asp-for="Stock" class="control-label">Current Stock</label>
             <input asp-for="Stock" class="form-control" type="text" id="original-stock" />
             <span asp-validation-for="Stock" class="text-danger"></span>
           </div>
