Order placement now updates both app db and Shopify inventory levels, including kits.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -130,10 +130,13 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="OrderFulFillment" asp-action="Index">Order Fulfillment</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="OrderFulFillment" asp-action="Index">Fulfillment</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">Inventory</a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Finances" asp-action="Index">Finances</a>
                   </li>
                 </ul>
               </li>
