--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -97,6 +97,10 @@ else
             <input asp-for="ShippingPostalCode" class="form-control" id="shipping-postal-code" />
             <span asp-validation-for="ShippingCountry" class="text-danger" id="val-shipping-postal-code"></span>
           </div>
+          <div class="form-group">
+            <label id="carrier" class="control-label"></label>
+            <select class="form-control" asp-items="ViewBag.Carrier"></select>
+          </div>
         </div>
         <div class="col-sm-4">
           <h4>Credit Card</h4>
@@ -173,6 +177,8 @@ else
         searching: false,
         sort: false,
         bInfo: false
+
+
       });
 
       if ($('#same-address').prop('checked')) {
