--- a/XOSkinWebApp/Views/Checkout/Index.cshtml
+++ b/XOSkinWebApp/Views/Checkout/Index.cshtml
@@ -97,10 +97,6 @@ else
             <input asp-for="ShippingPostalCode" class="form-control" id="shipping-postal-code" />
             <span asp-validation-for="ShippingCountry" class="text-danger" id="val-shipping-postal-code"></span>
           </div>
-          <div class="form-group">
-            <label id="carrier" class="control-label"></label>
-            <select class="form-control" asp-items="ViewBag.Carrier"></select>
-          </div>
         </div>
         <div class="col-sm-4">
           <h4>Credit Card</h4>
@@ -119,6 +115,11 @@ else
             <label class="control-label">Expiration Date</label>
             <input asp-for="CreditCardExpirationDate" class="form-control" type="Month" />
             <span asp-validation-for="CreditCardExpirationDate" class="text-danger"></span>
+          </div>
+          <br />
+          <div class="form-group">
+            <label id="carrier" class="control-label">Please Choose a Shipping Carrier</label>
+            <select class="form-control" asp-items="ViewBag.Carrier"></select>
           </div>
           <div style="text-align: right; margin-right: 40px">Sub-Total: $@Html.Raw(Model.SubTotal.ToString())</div>
           <div style="text-align: right; margin-right: 40px">Taxes: +$@Html.Raw(Model.Taxes.ToString())</div>
