--- a/XOSkinWebApp/Views/Orders/Detail.cshtml
+++ b/XOSkinWebApp/Views/Orders/Detail.cshtml
@@ -93,7 +93,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.SubTotal)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))</span>
         </div>
       </div>
       <div class="form-group">
@@ -102,7 +102,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.Taxes)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))</span>
         </div>
       </div>
       <div class="form-group">
@@ -111,7 +111,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.ShippingCharges)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))</span>
         </div>
       </div>
       <div class="form-group">
@@ -120,7 +120,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.CodeDiscount)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))</span>
         </div>
       </div>
       <div class="form-group">
@@ -129,7 +129,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.CouponDiscount)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))</span>
         </div>
       </div>
       <div class="form-group">
@@ -138,7 +138,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span class="font-weight-bolder">$@Html.Raw(Model.Total)</span>
+          <span class="font-weight-bolder">$@Html.Raw(String.Format("{0:0.00}", Model.Total))</span>
         </div>
       </div>
       <div class="form-group">
