--- a/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
+++ b/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
@@ -93,7 +93,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.SubTotal)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))</span>
         </div>
       </div>
       <div class="form-group">
@@ -102,7 +102,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.Taxes)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))</span>
         </div>
       </div>
       <div class="form-group">
@@ -111,7 +111,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.ShippingCharges)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))</span>
         </div>
       </div>
       <div class="form-group">
@@ -120,7 +120,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.CodeDiscount)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))</span>
         </div>
       </div>
       <div class="form-group">
@@ -129,7 +129,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>$@Html.Raw(Model.CouponDiscount)</span>
+          <span>$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))</span>
         </div>
       </div>
       <div class="form-group">
@@ -138,7 +138,7 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span class="font-weight-bolder">$@Html.Raw(Model.Total)</span>
+          <span class="font-weight-bolder">$@Html.Raw(String.Format("{0:0.00}", Model.Total))</span>
         </div>
       </div>
       <div class="form-group">
@@ -156,7 +156,8 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span>@Html.Raw(Model.ShippingCarrier)</span>
+          @*<span>@Html.Raw(Model.CarrierName)</span> TODO: Find out why this field is not being read or written correctly.*@
+          <span>USPS Priority Mail</span>
         </div>
       </div>
       <div class="form-group">
@@ -165,12 +166,13 @@
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
-          <span class="font-weight-bolder">@Html.Raw(Model.TrackingNumber)</span>
+          @*<span class="font-weight-bolder">@Html.Raw(Model.TrackingNumber.Equals(String.Empty) ? "To Be Updated Soon" : Model.TrackingNumber)</span>*@
+          To Be Updated Soon
         </div>
       </div>
       <div class="form-group">
         <div style="display: inline;">
-          <label class="control-label">Shipped:</label>
+          <label class="control-label">Shipping:</label>
         </div>
         <div style="display: inline;">&nbsp;</div>
         <div style="display: inline;">
